# WindowsAutoClicker

./: .gitignore  README.md  autoclicker.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml
